---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
import 'zod'; import 'lodash'; function f() {var x = 1; return{x}} class Foo {}
```

# Emitted Messages

```block
import "lodash";
import "zod";
function f() {
	const x = 1;
	return { x };
}
class Foo {}

```


